--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 # secret files 
 index.txt
-
+sanity_migration
 # dependencies
 /node_modules
 /.pnp
