--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "import-data": "node scripts/importSanityData.mjs"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
+    "@sanity/client": "^6.24.3",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.69.0",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.471.0",
     "next": "14.2.15",
     "next-sanity": "^9.8.35",
